--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             display: flex;
             justify-content: space-around;
             margin: 4rem 0;
+            flex-wrap: wrap;
+            gap: 2rem;
         }
 
         .feature-card {
@@ -149,6 +151,7 @@
             border-radius: 10px;
             max-width: 300px;
             text-align: center;
+            flex: 1;
         }
 
         .feature-icon {
@@ -176,6 +179,70 @@
         .cta-section h2 {
             font-size: 3rem;
             margin-bottom: 1rem;
+        }
+
+        /* Responsive Styling */
+        @media (max-width: 768px) {
+            .nav-links {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .title {
+                font-size: 2.5rem;
+            }
+
+            .subtitle {
+                font-size: 1.2rem;
+            }
+
+            .plan-card {
+                padding: 1.5rem;
+            }
+
+            .plan-name, .plan-price {
+                font-size: 1.5rem;
+            }
+
+            .plan-speed {
+                font-size: 1.2rem;
+            }
+
+            .cta-button {
+                padding: 0.8rem 1.5rem;
+                font-size: 1rem;
+            }
+
+            .feature-card {
+                max-width: 90%;
+            }
+
+            .cta-section h2 {
+                font-size: 2.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .title {
+                font-size: 2rem;
+            }
+
+            .subtitle {
+                font-size: 1rem;
+            }
+
+            .plan-header, .plan-speed {
+                font-size: 1rem;
+            }
+
+            .cta-button {
+                padding: 0.7rem 1.2rem;
+                font-size: 0.9rem;
+            }
+
+            .cta-section h2 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
@@ -270,3 +337,4 @@
     </div>
 </body>
 </html>
+
